Fix whitespaces

--- a/simplystudy-ui/src/app/learn/learn.component.css
+++ b/simplystudy-ui/src/app/learn/learn.component.css
@@ -1,3 +1,7 @@
+mat-card-content {
+  white-space: pre-wrap;
+}
+
 .question-set-container {
   padding: 1em;
 }
