--- a/simplystudy-ui/src/app/test-preview/test-preview.component.css
+++ b/simplystudy-ui/src/app/test-preview/test-preview.component.css
@@ -1,3 +1,7 @@
+mat-card-content {
+    white-space: pre-wrap;
+}
+
 .test-container {
     padding: 1em;
   }
